[package]
name = "quicduck"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "macros", "time", "sync", "io-util", "io-std"] }
quiche = "0.21"
ring = "0.17"
rcgen = "0.12"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
